Table User {
    id UUID [pk]
    friends UUID[] [ref: > User.id]
    username String
    profilePicture String // Replace with appropriate type if needed (e.g., URL or BLOB)
    firstName String
    lastName String
    bio String
}

Table Event {
    id UUID [pk]
    title String
    startTime String
    endTime String
    location UUID [ref: > Location.id]
    note String
    creator UUID [ref: > User.id]
    participants UUID[] [ref: > User.id, note: "List of participant User IDs"]
    chatMessages UUID[] [ref: > ChatMessage.id, note: "List of associated ChatMessage IDs"]
    invited UUID[] [ref: > User.id, note: "List of invited User IDs"]
}

Table ChatMessage {
    id UUID [pk]
    timestamp String
    user UUID [ref: > User.id]
    likedBy UUID[] [ref: > User.id, note: "List of User IDs who liked the message"]
}

Table Location {
    id UUID [pk]
    name String
    latitude Double
    longitude Double
}
